--- a/Aelita/scss/_pages.scss
+++ b/Aelita/scss/_pages.scss
@@ -73,12 +73,13 @@ body {
 	font-size: 20px;
 	line-height: 21px;
 	cursor: pointer;
-	transition: 0.4s;
+	transition: .5s;
 	color: #fff;
 }
 .nav__link:hover {
 	color: #ff8303;
 	text-shadow: 0px 0px 10px #ff8303, 0px 0px 10px #ff8303, 0px 0px 10px #ff8303;
+	transform: scale(1.1);
 }
 
 .header__body {
@@ -123,6 +124,7 @@ body {
 
 	img {
 		position: relative;
+		// z-index: 2;
 		left: -70px;
 		width: 400px;
 	}
@@ -275,6 +277,17 @@ body {
 			background: #32312e;
 			border-radius: 4px;
 			padding: 8px 12px;
+			position: relative;
+			z-index: 2;
+			transition: 0.4s;
+			cursor: pointer;
+
+			&:hover {
+				background: #ff8303;
+				color: #fff;
+				box-shadow: 0px 0px 10px orange;
+				transform: scale(1.1);
+			}
 		}
 	}
 }
@@ -286,12 +299,9 @@ body {
 		display: flex;
 		justify-content: center;
 	}
-	.header__logo {
+	.header__logo-footer {
 		margin-bottom: 20px;
 		h1 {
-			background: url(../img/NRI0.gif) no-repeat right;
-			background-size: cover;
-
 			color: orange;
 
 			transition: 0.5s;
@@ -343,6 +353,8 @@ body {
 			}
 
 			.link {
+				position: relative;
+				z-index: 2;
 				font-style: normal;
 				font-weight: 400;
 				font-size: 18px;
@@ -354,6 +366,13 @@ body {
 				width: 100%;
 				// height: 35px;
 				margin: 15px 0;
+				transition: 0.5s;
+
+				&:hover {
+					text-shadow: 0px 0px 10px orange;
+					transform: scale(1.05);
+					padding-bottom: 10px;
+				}
 			}
 			.email {
 				background: url(../img/email.svg) left no-repeat;
