--- a/Aelita/scss/_mobiles.scss
+++ b/Aelita/scss/_mobiles.scss
@@ -29,6 +29,11 @@
 }
 
 @media (max-width: 630px) {
+  .header {
+    .header__body {
+      margin: 30px 0;
+    }
+  }
 	.author__img {
 		background: url(../img/codepicture.png) center no-repeat;
 		background-size: cover;
