--- a/Aelita/scss/_reset.scss
+++ b/Aelita/scss/_reset.scss
@@ -1,14 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700;900&display=swap");
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: #212529;
+	-webkit-box-shadow: 0px 5px 10px red;
+	box-shadow: 0px 5px 10px red;
+}
+
+::-webkit-scrollbar-thumb {
+	background: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		from(red),
+		to(#002fff)
+	);
+	background: linear-gradient(to bottom, red, #002fff);
+	border-radius: 10px;
+	border: 2px solid #15c1e5;
+}
 
 *,
-::before,
-::after {
-  font-family: 'Inconsolata', monospace;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-  border: none;
-  background: transparent;
+*:before,
+*:after {
+	font-family: "Inconsolata", monospace;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	list-style: none;
+	text-decoration: none;
+	border: none;
+	background: transparent;
+}
+
+body {
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
